--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,6 @@
   min-height: 100vh;
 }
 
-/* Sidebar-ul rămâne fix la stânga */
 .layout > *:first-child {
   flex-shrink: 0;
 }
@@ -22,11 +21,10 @@
   flex: 1;
 }
 
-/* Conținutul principal */
 .mainContent {
   flex: 1;
   overflow: auto;
-  background-color: #f8f9fd; /* gri foarte deschis */
-  padding: 1rem; /* scade la 1rem pentru un aspect mai compact */
+  background-color: #f8f9fd;
+  padding: 1rem;
   box-sizing: border-box;
 }
