--- a/src/components/ProduktListe.module.css
+++ b/src/components/ProduktListe.module.css
@@ -39,7 +39,6 @@
   color: #182848;
 }
 
-/* Buton de ștergere */
 .deleteBtn {
   background-color: #d9534f;
   color: #fff;
@@ -48,8 +47,7 @@
   padding: 0.3rem 0.6rem;
   cursor: pointer;
   font-size: 0.8rem;
-  margin-left: auto; /* push to the right */
-  margin-right: 0;   /* optional, clarifică spațiul */
+  margin-left: auto;
 }
 
 .deleteBtn:hover {
